<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conf_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev.mad.ussd4etecsa.settings.ConfigActivity"
    tools:showIn="@layout/activity_config">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:divider="@drawable/separator"
            android:showDividers="middle"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/cv_accesibilidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="Accesibilidad"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView5"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/descripcion_accesibilidad"
                    android:textAlignment="viewStart"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cv_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_accesibilidad">

                <TextView
                    android:id="@+id/tv_notificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="Notificación"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tv_notificacion"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:text="@string/descripcion_notificacion"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="16sp" />

                    <Switch
                        android:id="@+id/sw_config_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView7"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:checked="false"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingBottom="4dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="6dp"
                        android:paddingTop="4dp"
                        android:textColorLink="@color/accent"
                        android:textSize="16sp"
                        tools:checked="false" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cv_Call_Sms_Reciber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:paddingBottom="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_notification">

                <TextView
                    android:id="@+id/tv_auto_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_auto_title"
                    android:layout_alignStart="@+id/tv_auto_title"
                    android:layout_below="@+id/tv_auto_title"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/config_Automata_text"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_auto_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/config_Automata_title"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="85dp"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/cbx_config_datos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/config_chbox_datos"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="16sp" />

                    <Switch
                        android:id="@+id/cbx_config_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/config_chbox_call"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="16sp" />

                    <Switch
                        android:id="@+id/cbx_config_sms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/config_chbox_sms"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="16sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>