<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.mad.ussd4etecsa.transferencia.TransferenciaFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main.appbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/primary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary">


                    <EditText
                        android:id="@+id/et_numtelf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/hint_trans_contacto"
                        android:inputType="phone"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/btn_transferir_contacto"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_transferir_contacto"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:clickable="true"
                        app:backgroundTint="@android:color/holo_blue_dark"
                        app:elevation="10dp"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toTopOf="@+id/btn_cambiar_contraseña"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_account_btn" />


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_cambiar_contraseña"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        app:backgroundTint="@android:color/holo_blue_dark"
                        app:elevation="10dp"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_lock" />

                    <EditText
                        android:id="@+id/et_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginRight="8dp"
                        android:ems="10"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/hint_trans_money"
                        android:inputType="text|number"
                        android:maxLength="5"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_contrasenna_input" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_contrasenna_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/btn_cambiar_contraseña"
                        app:layout_constraintTop_toBottomOf="@+id/et_numtelf"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/icons">

                        <EditText

                            android:id="@+id/et_contrasenna"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:fontFamily="sans-serif-condensed"
                            android:hint="@string/hint_trans_pass"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:text="@string/hint_trans_pass_val"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@+id/btn_cambiar_contraseña"
                            app:layout_constraintTop_toBottomOf="@+id/et_numtelf" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_transferencia"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_tranfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_send"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:elevation="5dp"
            app:fabSize="normal"
            app:layout_anchor="@id/main.appbar"
            app:layout_anchorGravity="bottom|right|end"
            app:rippleColor="@color/cardview_light_background" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>
